--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "seed": "tsx prisma/seed.ts"
   },
   "dependencies": {
+    "@e2b/code-interpreter": "^2.0.0",
     "@hookform/resolvers": "^5.2.1",
+    "@huggingface/inference": "^4.7.1",
+    "@inngest/agent-kit": "^0.9.0",
     "@prisma/client": "^6.14.0",
     "@prisma/extension-accelerate": "^2.0.2",
     "@radix-ui/react-accordion": "^1.2.12",
@@ -51,6 +54,7 @@
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.6.0",
+    "inngest": "^3.40.1",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.540.0",
     "next": "15.5.0",
