--- a/src/trpc/router/.env
+++ b/src/trpc/router/.env
@@ -6,3 +6,8 @@
 
 DATABASE_URL="postgresql://neondb_owner:npg_gtYv9UZD6TQi@ep-dawn-mud-a8nc606s-pooler.eastus2.azure.neon.tech/neondb?sslmode=require&channel_binding=require"
 NEXT_PUBLIC_APP_URL="http://localhost:3000"
+
+GEMINI_API_KEY="AIzaSyDRbjXkgvDdTywTBUCuXpK9w9YXPJFdJkU"
+
+#E2B
+E2B_API_KEY="e2b_2037457266ba1dab778dcfc6bb66eb6763b39a27"
